--- a/paginas-2/chocolatesblancos.html
+++ b/paginas-2/chocolatesblancos.html
@@ -95,24 +95,24 @@
     </main>
     <!--fin de main-->
     <!-- Incio de seccion 1 -->
-    <section>
+    <section class="seccion-1-blanco">
         <div class="fondo-imagen-blanco">
-            <img class="imagen-2-blanco" src="" alt="">
+            <img class="imagen-2-blanco" src="../recursos/imagenes/chocolatesblancos/blanco3.jpeg" alt="">
         </div>
         <div class="fondo-imagen-blanco">
-            <img class="imagen-2-blanco" src="" alt="">
+            <img class="imagen-2-blanco" src="../recursos/imagenes/chocolatesblancos/blanco6.jpeg" alt="">
         </div>
         <div class="fondo-imagen-blanco">
-            <img class="imagen-2-blanco" src="" alt="">
+            <img class="imagen-2-blanco" src="../recursos/imagenes/chocolatesblancos/blanco7.jpeg" alt="">
         </div>
         <div class="fondo-imagen-blanco">
-            <img class="imagen-2-blanco" src="" alt="">
+            <img class="imagen-2-blanco" src="../recursos/imagenes/chocolatesblancos/blanco1.jpg" alt="">
         </div>
         <div class="fondo-imagen-blanco">
-            <img class="imagen-2-blanco" src="" alt="">
+            <img class="imagen-2-blanco" src="../recursos/imagenes/chocolatesblancos/prinsipal.jfif" alt="">
         </div>
         <div class="fondo-imagen-blanco">
-            <img class="imagen-2-blanco" src="" alt="">
+            <img class="imagen-2-blanco" src="../recursos/imagenes/chocolatesblancos/blanco15.jpeg" alt="">
         </div>
     </section>
     <!--fin de seccion 1-->
