--- a/paginas-2/chocolatesconleche.html
+++ b/paginas-2/chocolatesconleche.html
@@ -96,30 +96,24 @@
     </main>
     <!--fin de main-->
       <!-- Incio de seccion 1 -->
-      <section>
-        <div class="fondo-imagen-conleche" >
-            <div class="imagen-1-conleche"></div>
-            <img class="imagen-2-conleche" src="" alt="">
+      <section class="seccion-1-con-leche">
+        <div class="fondo-imagen-con-leche">
+            <img class="imagen-2-con-leche" src="../recursos/imagenes/chocolatesconleche/conleche1.jpg" alt="">
         </div>
-        <div class="fondo-imagen-conleche" >
-            <div class="imagen-1-conleche"></div>
-            <img class="imagen-2-conleche" src="" alt="">
+        <div class="fondo-imagen-con-leche">
+            <img class="imagen-2-con-leche" src="../recursos/imagenes/chocolatesconleche/conleche2.jpg" alt="">
         </div>
-        <div class="fondo-imagen-conleche" >
-            <div class="imagen-1-conleche"></div>
-            <img class="imagen-2-conleche" src="" alt="">
+        <div class="fondo-imagen-con-leche">
+            <img class="imagen-2-con-leche" src="../recursos/imagenes/chocolatesconleche/conleche7.jpeg" alt="">
         </div>
-        <div class="fondo-imagen-conleche" >
-            <div class="imagen-1-conleche"></div>
-            <img class="imagen-2-conleche" src="" alt="">
+        <div class="fondo-imagen-con-leche">
+            <img class="imagen-2-con-leche" src="../recursos/imagenes/chocolatesconleche/conleche4.jpeg" alt="">
         </div>
-        <div class="fondo-imagen-conleche" >
-            <div class="imagen-1-conleche"></div>
-            <img class="imagen-2-conleche" src="" alt="">
+        <div class="fondo-imagen-con-leche">
+            <img class="imagen-2-con-leche" src="../recursos/imagenes/chocolatesconleche/conleche5.jpeg" alt="">
         </div>
-        <div class="fondo-imagen-conleche" >
-            <div class="imagen-1-conleche"></div>
-            <img class="imagen-2-conleche" src="" alt="">
+        <div class="fondo-imagen-con-leche">
+            <img class="imagen-2-con-leche" src="" alt="">
         </div>
     </section>
     <!--fin de seccion 1-->
