--- a/paginas-2/chocolatessemiamargo.html
+++ b/paginas-2/chocolatessemiamargo.html
@@ -96,29 +96,23 @@
     </main>
     <!--fin de main-->
     <!-- Incio de seccion 1 -->
-    <section>
+    <section class="seccion-1-semiamargo">
         <div class="fondo-imagen-semiamargo">
-            <div class="imagen-1-semiamargo"></div>
             <img class="imagen-2-semiamargo" src="" alt="">
         </div>
         <div class="fondo-imagen-semiamargo">
-            <div class="imagen-1-semiamargo"></div>
             <img class="imagen-2-semiamargo" src="" alt="">
         </div>
         <div class="fondo-imagen-semiamargo">
-            <div class="imagen-1-semiamargo"></div>
             <img class="imagen-2-semiamargo" src="" alt="">
         </div>
         <div class="fondo-imagen-semiamargo">
-            <div class="imagen-1-semiamargo"></div>
             <img class="imagen-2-semiamargo" src="" alt="">
         </div>
         <div class="fondo-imagen-semiamargo">
-            <div class="imagen-1-semiamargo"></div>
             <img class="imagen-2-semiamargo" src="" alt="">
         </div>
         <div class="fondo-imagen-semiamargo">
-            <div class="imagen-1-semiamargo"></div>
             <img class="imagen-2-semiamargo" src="" alt="">
         </div>
     </section>
