--- a/paginas-2/sint.a.a.c.html
+++ b/paginas-2/sint.a.a.c.html
@@ -96,29 +96,23 @@
     </main>
     <!--fin de main-->
     <!-- Incio de seccion 1 -->
-    <section>
+    <section class="seccion-1-sintaac">
         <div class="fondo-imagen-sintaac">
-            <div class="imagen-1-sintaac"></div>
             <img class="imagen-2-sintaac" src="" alt="">
         </div>
         <div class="fondo-imagen-sintaac">
-            <div class="imagen-1-sintaac"></div>
             <img class="imagen-2-sintaac" src="" alt="">
         </div>
         <div class="fondo-imagen-sintaac">
-            <div class="imagen-1-sintaac"></div>
             <img class="imagen-2-sintaac" src="" alt="">
         </div>
         <div class="fondo-imagen-sintaac">
-            <div class="imagen-1-sintaac"></div>
             <img class="imagen-2-sintaac" src="" alt="">
         </div>
         <div class="fondo-imagen-sintaac">
-            <div class="imagen-1-sintaac"></div>
             <img class="imagen-2-sintaac" src="" alt="">
         </div>
         <div class="fondo-imagen-sintaac">
-            <div class="imagen-1-sintaac"></div>
             <img class="imagen-2-sintaac" src="" alt="">
         </div>
     </section>
