--- a/paginas-2/chocolatesblancos.html
+++ b/paginas-2/chocolatesblancos.html
@@ -13,7 +13,7 @@
       <meta name="author" content="Lucas Gonzalez Righi">
   
       <!--Favicon-->
-      <link rel="shortcut icon" href="recursos/imagenes/logito-chocolate.png" type="image/x-icon">
+      <link rel="shortcut icon" href="../recursos/imagenes/logito-chocolate4.jpg" type="image/x-icon">
 
     <!-- LOGOS -->
     <script src="https://kit.fontawesome.com/a2bc90a5a0.js" crossorigin="anonymous"></script>
