--- a/paginas-2/chocolatessemiamargo.html
+++ b/paginas-2/chocolatessemiamargo.html
@@ -13,7 +13,7 @@
           <meta name="author" content="Lucas Gonzalez Righi">
       
           <!--Favicon-->
-          <link rel="shortcut icon" href="recursos/imagenes/logito-chocolate.png" type="image/x-icon">
+          <link rel="shortcut icon" href="../recursos/imagenes/logito-chocolate.png" type="image/x-icon">
     
         <!-- LOGOS -->
         <script src="https://kit.fontawesome.com/a2bc90a5a0.js" crossorigin="anonymous"></script>
@@ -98,22 +98,22 @@
     <!-- Incio de seccion 1 -->
     <section class="seccion-1-semiamargo">
         <div class="fondo-imagen-semiamargo">
-            <img class="imagen-2-semiamargo" src="" alt="">
+            <img class="imagen-2-semiamargo" src="../recursos/imagenes/chocolatessemiamargo/semiamargo.jpeg" alt="">
         </div>
         <div class="fondo-imagen-semiamargo">
-            <img class="imagen-2-semiamargo" src="" alt="">
+            <img class="imagen-2-semiamargo" src="../recursos/imagenes/chocolatessemiamargo/semiamargo1.jpeg" alt="">
         </div>
         <div class="fondo-imagen-semiamargo">
-            <img class="imagen-2-semiamargo" src="" alt="">
+            <img class="imagen-2-semiamargo" src="../recursos/imagenes/chocolatessemiamargo/semiamargo3.jpeg" alt="">
         </div>
         <div class="fondo-imagen-semiamargo">
-            <img class="imagen-2-semiamargo" src="" alt="">
+            <img class="imagen-2-semiamargo" src="../recursos/imagenes/chocolatessemiamargo/semiamargo4.jpg" alt="">
         </div>
         <div class="fondo-imagen-semiamargo">
-            <img class="imagen-2-semiamargo" src="" alt="">
+            <img class="imagen-2-semiamargo" src="../recursos/imagenes/chocolatessemiamargo/semiamargo5.jfif" alt="">
         </div>
         <div class="fondo-imagen-semiamargo">
-            <img class="imagen-2-semiamargo" src="" alt="">
+            <img class="imagen-2-semiamargo" src="../recursos/imagenes/chocolatessemiamargo/semiamargo6.jpeg" alt="">
         </div>
     </section>
     <!--fin de seccion 1-->
