--- a/paginas-2/bombones.html
+++ b/paginas-2/bombones.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Lucas Gonzalez Righi">
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="recursos/imagenes/logito-chocolate.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../recursos/imagenes/logito-chocolate5.jpg" type="image/x-icon">
 
     <!-- LOGOS -->
     <script src="https://kit.fontawesome.com/a2bc90a5a0.js" crossorigin="anonymous"></script>
