--- a/paginas-2/sint.a.a.c.html
+++ b/paginas-2/sint.a.a.c.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Lucas Gonzalez Righi">
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="recursos/imagenes/logito-chocolate.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../recursos/imagenes/logito-chocolate6.jpg" type="image/x-icon">
 
     <!-- LOGOS -->
     <script src="https://kit.fontawesome.com/a2bc90a5a0.js" crossorigin="anonymous"></script>
@@ -98,22 +98,22 @@
     <!-- Incio de seccion 1 -->
     <section class="seccion-1-sintaac">
         <div class="fondo-imagen-sintaac">
-            <img class="imagen-2-sintaac" src="" alt="">
+            <img class="imagen-2-sintaac" src="../recursos/imagenes/chocolatessintacc/sintaac1.jpg" alt="">
         </div>
         <div class="fondo-imagen-sintaac">
-            <img class="imagen-2-sintaac" src="" alt="">
+            <img class="imagen-2-sintaac" src="../recursos/imagenes/chocolatessintacc/sintaac2.jpeg" alt="">
         </div>
         <div class="fondo-imagen-sintaac">
-            <img class="imagen-2-sintaac" src="" alt="">
+            <img class="imagen-2-sintaac" src="../recursos/imagenes/chocolatessintacc/sintaac3.jpeg" alt="">
         </div>
         <div class="fondo-imagen-sintaac">
-            <img class="imagen-2-sintaac" src="" alt="">
+            <img class="imagen-2-sintaac" src="../recursos/imagenes/chocolatessintacc/sintaac4.jpeg" alt="">
         </div>
         <div class="fondo-imagen-sintaac">
-            <img class="imagen-2-sintaac" src="" alt="">
+            <img class="imagen-2-sintaac" src="../recursos/imagenes/chocolatessintacc/sintaac5.jpeg" alt="">
         </div>
         <div class="fondo-imagen-sintaac">
-            <img class="imagen-2-sintaac" src="" alt="">
+            <img class="imagen-2-sintaac" src="../recursos/imagenes/chocolatessintacc/sintaac6.jpeg" alt="">
         </div>
     </section>
     <!--fin de seccion 1-->
