--- a/paginas-2/chocolatesconleche.html
+++ b/paginas-2/chocolatesconleche.html
@@ -113,7 +113,7 @@
             <img class="imagen-2-con-leche" src="../recursos/imagenes/chocolatesconleche/conleche5.jpeg" alt="">
         </div>
         <div class="fondo-imagen-con-leche">
-            <img class="imagen-2-con-leche" src="" alt="">
+            <img class="imagen-2-con-leche" src="../recursos/imagenes/chocolatesconleche/conleche6.jpeg" alt="">
         </div>
     </section>
     <!--fin de seccion 1-->
