--- a/paginas-2/chocolatesconleche.html
+++ b/paginas-2/chocolatesconleche.html
@@ -38,8 +38,7 @@
                         <div class="container-fluid">
                             <form class="d-flex">
                                 <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label=Buscar">
-                                <button style="color: red; border-color: red;" class="btn  btn-outline-success"
-                                    type="submit">Buscador</button>
+                                    <button class="btn btn-outline-success color-boton" type="submit">Buscador</button>
                             </form>
                         </div>
                     </nav>
