--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <nav class="navbar-light">
                         <div class="container-fluid">
                             <form class="d-flex">
-                                <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label=Buscar">
+                                <input class="form-control me-2 buscador-2 type="Buscar" placeholder="Buscar" aria-label=Buscar">
                                     <button class="btn btn-outline-success color-boton" type="submit">Buscador</button>
                             </form>
                         </div>
