--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Booststrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Tienda de Chocolates Online</title>
+    <title>Tienda de Chocolates Online | Chocolates Punto Rojo</title>
 </head>
 
 <body>
